// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dashboard snapshots there are available dashboards 1`] = `
<div
  className="d-flex flex-column p-2 mt-3"
  id="dashboard-container"
>
  <EnterpriseDashboardModal />
  <EmptyCourse />
</div>
`;

exports[`Dashboard snapshots there are courses, or they are still loading 1`] = `
<div
  className="d-flex flex-column p-2 mt-3"
  id="dashboard-container"
>
  <Container
    fluid={true}
    size="xl"
  >
    <Row>
      <Col
        className="p-0 px-4"
        lg={
          Object {
            "offset": 1,
            "span": 10,
          }
        }
        md={
          Object {
            "offset": 0,
            "span": 12,
          }
        }
        sm={
          Object {
            "offset": 2,
            "span": 8,
          }
        }
        xl={
          Object {
            "offset": 0,
            "span": 8,
          }
        }
        xs={
          Object {
            "offset": 0,
            "span": 12,
          }
        }
      >
        <CourseList />
      </Col>
      <Col
        className="p-0 pr-4 pl-1"
        md={12}
        xl={4}
      >
        <WidgetSidebar />
      </Col>
    </Row>
  </Container>
</div>
`;

exports[`Dashboard snapshots there are no courses 1`] = `
<div
  className="d-flex flex-column p-2 mt-3"
  id="dashboard-container"
>
  <EmptyCourse />
</div>
`;

exports[`Dashboard snapshots there is a select session modal 1`] = `
<div
  className="d-flex flex-column p-2 mt-3"
  id="dashboard-container"
>
  <EmptyCourse />
</div>
`;
